--- a/src/Soundoutput.css
+++ b/src/Soundoutput.css
@@ -1,63 +1,48 @@
 .soundinput {
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-top: 5vh;
-    padding-right: 4vmin;
-    padding-left: 4vmin;
-    height: 100vh;
-    width: 30.5vmin;
-    background-color: rgb(255, 255, 255);
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-top: 5vh;
+  padding-right: 4vmin;
+  padding-left: 4vmin;
+  height: 100vh;
+  width: 30.5vmin;
+  background-color: rgb(255, 255, 255);
 }
-
 
 
 /* CSS */
-.button-64 {
-  align-items: center;
-  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-  border: 0;
-  border-radius: 8px;
-  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  display: flex;
-  font-family: Phantomsans, sans-serif;
-  font-size: 20px;
-  justify-content: center;
-  line-height: 1em;
-  max-width: 100%;
-  min-width: 140px;
-  padding: 3px;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  cursor: pointer;
+.button-81 {
+background-color: #fff;
+border: 0 solid #e2e8f0;
+border-radius: 1.5rem;
+box-sizing: border-box;
+color: #0d172a;
+cursor: pointer;
+display: inline-block;
+font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+font-size: 1.1rem;
+font-weight: 600;
+line-height: 1;
+padding: 1rem 1.6rem;
+text-align: center;
+text-decoration: none #0d172a solid;
+text-decoration-thickness: auto;
+transition: all .1s cubic-bezier(.4, 0, .2, 1);
+box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
 }
 
-.button-64:active,
-.button-64:hover {
-  outline: 0;
-}
-
-.button-64 span {
-  background-color: rgb(5, 6, 45);
-  padding: 8px 12px;
-  border-radius: 6px;
-  width: 100%;
-  height: 100%;
-  transition: 300ms;
-}
-
-.button-64:hover span {
-  background: none;
+.button-81:hover {
+background-color: #1e293b;
+color: #fff;
 }
 
 @media (min-width: 768px) {
-  .button-64 {
-    font-size: 24px;
-    min-width: 196px;
-  }
+.button-81 {
+  font-size: 1.125rem;
+  padding: 1rem 2rem;
+}
 }
